/*
 * Copyright The OpenTelemetry Authors
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package io.opentelemetry.extension.controlplane.proto.v1;

option java_package = "io.opentelemetry.sdk.extension.controlplane.proto.v1";
option java_outer_classname = "ServiceProtos";

import "controlplane/v1/config.proto";
import "controlplane/v1/task.proto";
import "controlplane/v1/status.proto";

// 控制平面服务 (一元长轮询模式，预留双向流扩展)
service ControlPlaneService {
  // 获取配置 (长轮询)
  rpc GetConfig(ConfigRequest) returns (ConfigResponse);
  
  // 获取任务 (长轮询)
  rpc GetTasks(TaskRequest) returns (TaskResponse);
  
  // 上报状态
  rpc ReportStatus(StatusRequest) returns (StatusResponse);
  
  // 上传分片结果
  rpc UploadChunkedResult(ChunkedTaskResult) returns (ChunkedUploadResponse);
  
  // === 预留双向流接口 (后续扩展) ===
  // rpc StreamControl(stream ControlMessage) returns (stream ControlMessage);
}
